# genetic_optimization

./: Cargo.toml  README.md
data/: cities.txt
src/: genetic.rs  main.rs  population.rs  utils.rs
